--- a/src/views/HomePageView/HomePageView.module.css
+++ b/src/views/HomePageView/HomePageView.module.css
@@ -1,12 +1,12 @@
 .container {
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
     grid-template-rows: auto;
     display: grid;
 }
 
 @media (min-width: 400px) {
     .container {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 50% 50%;
     }
 }
 
