--- a/src/views/HomePageView/HomePageView.module.css
+++ b/src/views/HomePageView/HomePageView.module.css
@@ -1,4 +1,6 @@
 .container {
+    width: 100vw;
+    height: 100vh;
     grid-template-columns: 100%;
     grid-template-rows: auto;
     display: grid;
